--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pandas
-numpy as np
-matplotlib.pyplot as plt
+numpy
+matplotlib
 geopy
-streamlit as st
-altair as alt
-from geopy.geocoders import Nominatim
-pydeck as pdk
+streamlit
+altair
+pydeck
